--- a/appsettings.json
+++ b/appsettings.json
@@ -6,14 +6,16 @@
   "AppSettings": {
     "passwordKey": "http://uat.HaloCareCore.co.za/Account/ResetPassword?k=",
     "dir": "D:/Applications/HaloCareLive/uploads/EmailAttachments/",
-    "UAT": "0"
+    "UAT": "0",
+    "Citizen": "South African",
+    "EPPlus:ExcelPackage.LicenseContext": "NonCommercial"
   },
   "EmailSettings": {
     "smsAddress": "http://api.clickatell.com/http/sendmsg",
     "smsMediscorAddress": "https://sectest.mediscor.co.za:3335/PUBLIC_API/WEBS1@04",
     "iSeriesMemberAddress": "http://sectest.mediscor.co.za:1234/PUBLIC_API/WEBS1@10",
     "SmtpServer": "192.168.60.20",
-    "SupportEmailsFrom": "support@HaloCareCore.co.za",
+    "SupportEmailsFrom": "support@HaloCareCore.co.za"
   },
   "Logging": {
     "LogLevel": {
